<resources>
    <string name="app_name">BeGood</string>
    <string name="Log_in">Log In</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="homeTest">You can now collect points by saving water . Use your points to get amazing offers and to shop on our store </string>
    <string name="forgetPassword">Forget Password</string>
    <string name="dontHaveAccount">Don\'t have account</string>
    <string name="SignUp">Sign Up</string>
    <string name="addYourBills">Add your bills</string>
    <string name="shopUsingPoints">Shop using your points</string>
    <string name="PointsYouHave">you have 45 points</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="addYourNewBill">Add your new bill</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_us_text">We try to find the best way to reduce your water use</string>
    <string name="BeGood_Team">BeGood Team</string>
    <string name="advice">Some Advice how you can reduce the water use</string>
    <string name="addBill1Value">Add You Bill Value : </string>
    <string name="take_photo">Take a photo to your bill</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
</resources>
