<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dropwater_finalone" />

    <TextView
        android:id="@+id/tvhometext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:background="@drawable/custome_input"
        android:gravity="center|center_horizontal"
        android:padding="40dp"
        android:backgroundTint="@color/buttonFill"
        android:text="@string/homeTest"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:text="@string/addYourBills"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvhometext"
        app:rippleColor="@color/buttonBorders"
        app:strokeColor="#000000"
        android:layout_margin="15dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopUsingPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:width="300dp"
        app:rippleColor="@color/buttonBorders"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:padding="15dp"
       />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PointsYouHave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:width="300dp"
        app:rippleColor="@color/buttonBorders"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:padding="15dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>